DG-17042 fix broken z-index
There was a z-index issue on the board after the most recent changes;
make another tweak to make things work better.

--- a/css/tron.css
+++ b/css/tron.css
@@ -317,3 +317,7 @@
  {
 	background-image: none;
 }
+
+.aui-theme-default.TRON #ghx-column-header-group.ghx-fixed {
+	z-index: 3;
+}
